<resources>
    <string name="app_name">STAR FOOTBALL</string>
    <string name="welcome">Welcome</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="no_internet">No internet connection!</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="get_product_data">Get Product Data</string>
    <string name="no_data">No data found!</string>
    <string name="name">Name</string>
    <string name="mohit_savaj">Mohit Savaj</string>
    <string name="salary">Salary</string>
    <string name="age">Age</string>
    <string name="product_data">Product Data</string>
    <string name="live_score">Live Score</string>
    <string name="teams">Teams</string>
    <string name="prediction">Prediction</string>
    <string name="vs">VS</string>
    <string name="result">Results</string>
    <string name="dash">-</string>
    <string name="loading">Loading...</string>
    <string name="draw">Draw</string>
    <string name="schedule">Schedule</string>
    <string name="winner">Winner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">Matches</string>
    <string name="squad">Squad</string>
    <string name="standings">Standings</string>
    <string name="club">CLUB</string>
    <string name="mp">MP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="pts">Pts</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="last_5">Last 5</string>
    <string name="channel">Channel</string>
</resources>