<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:fontFamily="@font/font_bold"
        tools:text="Group A" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:nestedScrollingEnabled="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@color/white">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/club"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/mp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/w"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/d"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/l"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/pts"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp"
                    app:fontFamily="@font/font_bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/gf"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/ga"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/gd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/last_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_sub_standing" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>